packages/jsii/test/negatives/neg.enum-members.1.ts
export enum MyEnum {
  FOO,
  Goo,
}
